# cuda-kernel-uv

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MULTI_LANG_PLAN.md  PLAN.md  README.md  environment.yml  requirements.txt  setup.sh
chapters/01_introduction/: CMakeLists.txt  CONTENTS.txt  QUICK_START.md  README.md
chapters/01_introduction/examples/01_hello_cuda/: CMakeLists.txt  README.md  hello.cu
chapters/01_introduction/examples/02_vector_add/: CMakeLists.txt  README.md  vector_add.cu
chapters/01_introduction/examples/03_device_query/: CMakeLists.txt  README.md  device_query.cu
chapters/01_introduction/exercises/01_vector_subtract/: problem.md  solution.cu  starter.cu  test.py
chapters/01_introduction/exercises/02_saxpy/: problem.md  solution.cu  starter.cu  test.py
chapters/02_cuda_basics/: BUILD_GUIDE.md  CMakeLists.txt  README.md
chapters/02_cuda_basics/examples/01_2d_indexing/: CMakeLists.txt  README.md  indexing_2d.cu
chapters/02_cuda_basics/examples/02_shared_memory/: CMakeLists.txt  README.md  shared_mem.cu
chapters/02_cuda_basics/examples/03_reduction/: CMakeLists.txt  README.md  reduction.cu
chapters/02_cuda_basics/examples/04_histogram/: CMakeLists.txt  README.md  histogram.cu
chapters/02_cuda_basics/exercises/01_matrix_transpose/: problem.md  solution.cu  starter.cu  test.py
chapters/02_cuda_basics/exercises/02_dot_product/: problem.md  solution.cu  starter.cu  test.py
chapters/03_profiling/: CMakeLists.txt  QUICKSTART.md  README.md  SUMMARY.md
chapters/03_profiling/examples/01_matmul_naive/: CMakeLists.txt  README.md  matmul_naive.cu
chapters/03_profiling/examples/02_matmul_coalesced/: CMakeLists.txt  README.md  matmul_coalesced.cu
chapters/03_profiling/examples/03_matmul_tiled/: CMakeLists.txt  README.md  matmul_tiled.cu
chapters/03_profiling/examples/04_matmul_optimized/: CMakeLists.txt  README.md  matmul_optimized.cu
chapters/03_profiling/exercises/01_optimize_transpose/: problem.md  solution.cu  starter.cu  test.py
chapters/03_profiling/profiling/: metrics_explained.md  profiling_guide.md  sample_commands.sh
chapters/04_cutlass_cute/: CMakeLists.txt  CONTENT_SUMMARY.md  INDEX.md  QUICK_START.md  README.md
chapters/04_cutlass_cute/examples/01_cutlass_setup/: CMakeLists.txt  README.md  test_cutlass.cu
chapters/04_cutlass_cute/examples/02_cute_layout/: CMakeLists.txt  README.md  layout_basics.cu  layout_operations.cu
chapters/04_cutlass_cute/examples/03_cute_gemm/: CMakeLists.txt  README.md  gemm_simple.cu  gemm_tiled.cu
chapters/04_cutlass_cute/examples/04_tensor_cores/: CMakeLists.txt  README.md  mma_gemm.cu  wmma_gemm.cu
chapters/04_cutlass_cute/examples/05_cutedsl/: README.md  gemm_python.py
chapters/04_cutlass_cute/exercises/01_batched_gemm/: CMakeLists.txt  problem.md  solution.cu  starter.cu  test.py
chapters/04_cutlass_cute/exercises/02_fp16_gemm/: CMakeLists.txt  problem.md  solution.cu  starter.cu  test.py
chapters/05_deepgemm/: CMakeLists.txt  FILES.md  INDEX.md  QUICKSTART.md  README.md  SUMMARY.md
chapters/05_deepgemm/benchmarks/: README.md  bench_fp8.py  bench_grouped.py
chapters/05_deepgemm/examples/01_fp8_basics/: CMakeLists.txt  README.md  fp8_conversion.cu  fp8_types.cu
chapters/05_deepgemm/examples/02_quantization/: CMakeLists.txt  README.md  fine_grained_scaling.cu  quantize.cu
chapters/05_deepgemm/examples/03_grouped_gemm/: CMakeLists.txt  README.md  grouped_gemm.cu  variable_sizes.cu
chapters/05_deepgemm/examples/04_deepgemm_usage/: README.md  dense_example.py  moe_example.py
chapters/05_deepgemm/exercises/01_simple_grouped_gemm/: problem.md  solution.cu  starter.cu  test.py
chapters/06_advanced_cuda/: CMakeLists.txt  README.md
chapters/06_advanced_cuda/examples/01_warp_primitives/: CMakeLists.txt  README.md  warp_shuffle.cu  warp_vote.cu
chapters/06_advanced_cuda/examples/02_warp_reduction/: CMakeLists.txt  README.md  warp_reduce.cu
chapters/06_advanced_cuda/examples/03_cooperative_groups/: CMakeLists.txt  README.md  cg_basics.cu  grid_sync.cu
chapters/06_advanced_cuda/examples/04_cuda_graphs/: CMakeLists.txt  README.md  graph_basics.cu  graph_capture.cu
chapters/06_advanced_cuda/examples/05_scan/: CMakeLists.txt  README.md  prefix_scan.cu
chapters/06_advanced_cuda/exercises/01_warp_reduce/: problem.md  solution.cu  starter.cu  test.py
chapters/06_advanced_cuda/exercises/02_block_scan/: problem.md  solution.cu  starter.cu  test.py
chapters/07_triton/: QUICKSTART.md  README.md  SUMMARY.md
chapters/07_triton/examples/01_vector_add/: README.md  vector_add.py
chapters/07_triton/examples/02_softmax/: README.md  softmax.py
chapters/07_triton/examples/03_matmul/: README.md  matmul_autotuned.py  matmul_blocked.py  matmul_naive.py
chapters/07_triton/examples/04_fused_ops/: README.md  fused_add_mul.py  fused_attention.py  fused_layernorm.py
chapters/07_triton/examples/05_autotuning/: README.md  autotune_example.py
chapters/07_triton/exercises/01_relu_fusion/: problem.md  (+3 more)
chapters/07_triton/puzzles/: README.md  puzzle_01_add.py  puzzle_solutions.py
chapters/08_tilelang/: INDEX.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  test_all.py
chapters/09_sparse_attention/: GETTING_STARTED.md  README.md
chapters/09_sparse_attention/benchmarks/: README.md  bench_attention.py  memory_analysis.py
chapters/10_moe_accelerators/: INDEX.md  QUICKSTART.md  README.md  SUMMARY.md
chapters/10_moe_accelerators/benchmarks/: README.md  bench_moe_variants.py  throughput.py
chapters/11_capstone/: README.md
chapters/11_capstone/project_a_inference_engine/: README.md
chapters/11_capstone/project_b_kernel_comparison/: README.md  report_template.md
chapters/11_capstone/project_c_custom_sparse_attention/: README.md
chapters/11_capstone/resources/: optimization_tips.md  presentation_template.md  profiling_checklist.md
chapters/12_llm_serving/: README.md
chapters/13_flashinfer_bench/: README.md
common/: CMakeLists.txt
common/include/: check.cuh  cuda_utils.cuh  timer.cuh
common/python/: utils.py
tests/: CMakeLists.txt  test_common.cu
(+95 files in other folders)
